# work-design-server

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: system_monitor.md
migrations/: 20240101000002_verification_codes.sql  20240101000003_create_programs.sql  20241226180224_table.sql  20250105095035_table.sql  20250125053442_data.sql  20250222100850_data.sql  20250223072639_data.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: auth.rs  docs.rs  documents.rs  email.rs  logs.rs  mod.rs  monitor.rs  program.rs  python.rs  tasks.rs  users.rs  websocket.rs
src/db/: mod.rs
src/handlers/: mod.rs
src/middleware/: auth.rs  mod.rs  monitor.rs
src/models/: document.rs  log.rs  message.rs  mod.rs  program.rs  task.rs  user.rs
src/services/: broadcast.rs  document.rs  log.rs  metrics.rs  mod.rs  monitor.rs  monitor_task.rs  program.rs  scheduler.rs  task.rs  user.rs
src/tests/: mod.rs
src/tests/api/: auth_tests.rs
src/utils/: cron.rs  email.rs  mod.rs  password.rs  python.rs
