[package]
name = "work-designer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["ws", "multipart"] }
# 异步
tokio = { version = "1.0", features = ["full"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 数据库
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }
# 唯一标识
uuid = { version = "1.0", features = ["serde", "v4"] }
# redis
deadpool-redis = { version = "0.13", features = ["serde"] }
# 时间
chrono = { version = "0.4", features = ["serde"] }
# 中间件
tower-http = { version = "0.5", features = ["cors"] }
# 配置
config = "0.13"
dotenv = "0.15"
# 错误处理
thiserror = "1.0"
jsonwebtoken = "9.2"
# 邮件
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
# Python
pyo3 = { version = "0.20", features = ["auto-initialize", "abi3-py38"] }
# 系统监控
cron = "0.12"
tokio-cron-scheduler = "0.9"
# 系统监控
sysinfo = "0.29"
# 异步
futures = "0.3"
# API 文档
utoipa = { version = "4.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }

# 指标监控
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# 日志追踪
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8"

# 加密
argon2 = "0.5.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["migrate"]
migrate = []

[workspace]
members = ["."]

[target.aarch64-apple-darwin]
rustflags = [
    "-C",
    "link-arg=-undefined",
    "-C",
    "link-arg=dynamic_lookup",
    "-L",
    "native=/opt/homebrew/opt/python@3.13/lib",
]
